--- a/public/views/form.html
+++ b/public/views/form.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Formulário de Cadastro</title>
+    <link rel="stylesheet" href="../css/index.css" />
   </head>
+
   <body>
     <main>
       <section>
         <h1>Cadastro de Cliente</h1>
         <form action="/clientes" method="post">
           <label for="nome">Nome:</label><br />
-          <input type="text" id="nome" name="nome" required /><br /><br />
+          <input type="text" id="nome" name="nome" required />
 
           <label for="cpf">CPF:</label><br />
           <input
@@ -21,7 +23,15 @@
             maxlength="14"
             placeholder="000.000.000-00"
             required
-          /><br /><br />
+          />
+
+          <label for="email">Email:</label><br />
+          <input
+            type="email"
+            id="email"
+            name="email"
+            placeholder="seunome@gmail.com"
+          />
 
           <label for="telefone">Telefone:</label><br />
           <input
@@ -30,10 +40,7 @@
             name="telefone"
             placeholder="(00) 00000-0000"
             required
-          /><br /><br />
-
-          <label for="email">Email:</label><br />
-          <input type="email" id="email" name="email" /><br /><br />
+          />
 
           <button type="submit">Cadastrar</button>
         </form>
