style: Organiza os arquivos css em arquivos separados e usa o @import

--- a/public/views/form.html
+++ b/public/views/form.html
@@ -8,6 +8,9 @@
   </head>
 
   <body>
+    <header>
+      <h1>Controle de Clientes</h1>
+    </header>
     <main>
       <section>
         <h1>Cadastro de Cliente</h1>
