--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,25 +1,5 @@
-/* Reset básico */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-/* Fonte Poppins do Google Fonts */
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
-
-/* Definindo tamanho base da fonte */
-html {
-  font-size: 16px;
-}
-
-/* Estilo do corpo da página */
-body {
-  font-size: 1rem;
-  font-family: "Poppins", sans-serif;
-  background-color: #f5f5f5;
-  color: #333;
-}
+@import url(./reset.css);
+@import url(./header.css);
 
 /* Centralização do conteúdo principal */
 main {
