fix: Resolve o erro de variável de ambiente

--- a/public/views/clientes-cadastrados.html
+++ b/public/views/clientes-cadastrados.html
@@ -7,11 +7,15 @@
     <link rel="stylesheet" href="../css/visu-clientes.css" />
   </head>
   <body>
+    <!-- header -->
     <header>
       <h1>Clientes Cadastrados</h1>
     </header>
+    <!-- main -->
     <main>
+      <!-- section -->
       <section>
+        <!-- ul de item clientes -->
         <ul></ul>
       </section>
     </main>
