--- a/public/css/index.css
+++ b/public/css/index.css
@@ -77,7 +77,7 @@ button:hover {
   background-color: #3498db;
 }
 
-ul {
+ul.menu {
   list-style-type: none;
   width: 100%;
   display: flex;
@@ -88,11 +88,11 @@ ul {
   padding: 1rem;
 }
 
-ul li {
+ul.menu li {
   width: 100%;
 }
 
-ul li a {
+ul.menu li a {
   display: block;
   border: 1px solid rgb(0, 0, 0, 0.5);
   color: #000;
