--- a/public/views/clientes-cadastrados.html
+++ b/public/views/clientes-cadastrados.html
@@ -10,6 +10,7 @@
     <!-- header -->
     <header>
       <h1>Clientes Cadastrados</h1>
+      <span id="qtde-clientes"></span>
     </header>
     <!-- main -->
     <main>
