feat: Adiciona máscara de input para CPF e telefone no formulário de cadastro

--- a/public/views/form.html
+++ b/public/views/form.html
@@ -9,7 +9,7 @@
 
   <body>
     <header>
-      <h1>Controle de Clientes</h1>
+      <h1>Formulário de Cadastro</h1>
     </header>
     <main>
       <section>
