feat: Adiciona links para melhorar navegação

--- a/public/views/clientes-cadastrados.html
+++ b/public/views/clientes-cadastrados.html
@@ -14,6 +14,12 @@
     </header>
     <!-- main -->
     <main>
+      <nav>
+        <a href="/clientes/novo">Cadastrar</a>
+        <a href="/admin">Início</a>
+        <a href="/login">Sair</a>
+        <a href="/clientes">Atualizar</a>
+      </nav>
       <!-- section -->
       <section>
         <!-- ul de item clientes -->
