--- a/public/css/visu-clientes.css
+++ b/public/css/visu-clientes.css
@@ -4,6 +4,39 @@
 /* em coluna, para mostra o titulo e a qtde de clientes no banco */
 header {
   flex-direction: column;
+  text-align: center;
+}
+
+header span {
+  font-size: 1.2rem;
+  font-weight: 600;
+}
+
+nav {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+  padding: 0.5rem;
+  background-color: #ccc;
+}
+nav a {
+  padding: 0.5rem;
+  text-align: center;
+  border-radius: 4px;
+  border: none;
+  background-color: #3498db;
+  color: #fff;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+nav a:hover {
+  background-color: #2980b9;
+}
+
+@media (max-width: 768px) {
+  nav {
+    gap: 0.5rem;
+  }
 }
 
 ul {
