--- a/public/views/clientes-cadastrados.html
+++ b/public/views/clientes-cadastrados.html
@@ -16,8 +16,7 @@
     <main>
       <nav>
         <a href="/clientes/novo">Cadastrar</a>
-        <a href="/admin">Início</a>
-        <a href="/login">Sair</a>
+        <a href="/">Início</a>
         <a href="/clientes">Atualizar</a>
       </nav>
       <!-- section -->
