--- a/public/views/form.html
+++ b/public/views/form.html
@@ -10,6 +10,10 @@
   <body>
     <header>
       <h1>Formulário de Cadastro</h1>
+      <nav>
+        <a href="/">Início</a>
+        <a href="/clientes">Listar</a>
+      </nav>
     </header>
     <main>
       <section>
