feat: Cria a estrutura do select para escolher o produto que foi alugado pelo cliente

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -44,7 +44,9 @@ label {
 /* Estilo dos campos de entrada */
 input[type="text"],
 input[type="email"],
-input[type="tel"] {
+input[type="tel"],
+select {
+  width: 100%;
   padding: 0.75rem;
   border: 1px solid #ccc;
   border-radius: 4px;
