--- a/public/views/form.html
+++ b/public/views/form.html
@@ -48,7 +48,15 @@
             placeholder="(00) 00000-0000"
             required
           />
-
+          <!-- caixa para selecionar o produto que a pessoa alugou -->
+          <label for="produtos">Produto alugado:</label>
+          <select name="produtos" id="produtos">
+            <option disabled selected>Selecione um produto:</option>
+            <option value="2">Produto 2</option>
+            <option value="3">Produto 3</option>
+            <option value="3">Produto 3</option>
+            <option value="3">Produto 3</option>
+          </select>
           <button type="submit">Cadastrar</button>
         </form>
       </section>
