feat: Adiciona o cors ao projeto

--- a/public/views/form.html
+++ b/public/views/form.html
@@ -52,10 +52,8 @@
           <label for="produtos">Produto alugado:</label>
           <select name="produtos" id="produtos">
             <option disabled selected>Selecione um produto:</option>
-            <option value="2">Produto 2</option>
-            <option value="3">Produto 3</option>
-            <option value="3">Produto 3</option>
-            <option value="3">Produto 3</option>
+            <option value="Andaime">Andaime</option>
+            <option value="Furadeira">Furadeira</option>
           </select>
           <button type="submit">Cadastrar</button>
         </form>
