--- a/public/views/clientes-cadastrados.html
+++ b/public/views/clientes-cadastrados.html
@@ -21,6 +21,12 @@
       </nav>
       <!-- section -->
       <section>
+        <!-- input de pesquisa -->
+        <input
+          type="text"
+          id="pesquisa"
+          placeholder="Pesquisar cliente por nome..."
+        />
         <!-- ul de item clientes -->
         <ul></ul>
       </section>
