--- a/public/views/clientes-cadastrados.html
+++ b/public/views/clientes-cadastrados.html
@@ -15,9 +15,10 @@
     <!-- main -->
     <main>
       <nav>
-        <a href="/clientes/novo">Cadastrar</a>
         <a href="/">Início</a>
+        <a href="/clientes/novo">Cadastrar</a>
         <a href="/clientes">Atualizar</a>
+        <a href="/clientes/baixar">Exportar Excel</a>
       </nav>
       <!-- section -->
       <section>
