feat: Cria páginas futuras, mas com o uso do tailwind - Remove rotas para autenticação com express-session

--- a/public/views/form.html
+++ b/public/views/form.html
@@ -52,8 +52,23 @@
           <label for="produtos">Produto alugado:</label>
           <select name="produtos" id="produtos" required>
             <option value="" disabled selected>Selecione um produto:</option>
-            <option value="Andaime">Andaime</option>
             <option value="Furadeira">Furadeira</option>
+            <option value="Andaimes">Andaimes</option>
+            <option value="Plataforma">Plataforma</option>
+            <option value="Travas diagonal para andaimes">
+              Travas diagonal para andaimes
+            </option>
+            <option value="Rodízios">Rodízios</option>
+            <option value="Furadeira">Furadeira</option>
+            <option value="Betoneiras">Betoneiras</option>
+            <option value="Escoras">Escoras</option>
+            <option value="Serra mármore">Serra mármore</option>
+            <option value="Martelete rompedor 5k">Martelete rompedor 5k</option>
+            <option value="Martelete rompedor 820">
+              Martelete rompedor 820
+            </option>
+            <option value="Canos para colunas">Canos para colunas</option>
+            <option value="Máquina de solda">Máquina de solda</option>
           </select>
           <button type="submit">Cadastrar</button>
         </form>
