--- a/public/views/index.html
+++ b/public/views/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Controle de Clientes</title>
+    <script
+      defer
+      src="https://cloud.umami.is/script.js"
+      data-website-id="e26aad4f-40b6-4665-9cc4-3db6e016640d"
+    ></script>
     <link rel="stylesheet" href="../css/index.css" />
   </head>
   <body>
