feat: validação de CPF/CNPJ, novos campos de endereço e ajustes de estilo no main

--- a/public/views/editar-cliente.html
+++ b/public/views/editar-cliente.html
@@ -28,6 +28,9 @@
           <label for="email">Email:</label><br />
           <input type="email" id="email" name="email" />
 
+          <label for="endereco">Endereço:</label><br />
+          <input type="text" id="endereco" name="endereco" />
+
           <label for="telefone">Telefone:</label><br />
           <input type="tel" id="telefone" name="telefone" required />
 
