--- a/public/views/form.html
+++ b/public/views/form.html
@@ -6,7 +6,12 @@
     <title>Formulário de Cadastro</title>
     <link rel="stylesheet" href="../css/index.css" />
   </head>
-
+  <style>
+    /* Deixa main com altura automática pra não ficar ficar em cima do header */
+    main {
+      height: auto;
+    }
+  </style>
   <body>
     <header>
       <h1>Formulário de Cadastro</h1>
@@ -19,28 +24,35 @@
       <section>
         <h1>Cadastro de Cliente</h1>
         <form action="/clientes" method="post">
-          <label for="nome">Nome:</label><br />
+          <label for="nome">Nome:</label>
           <input type="text" id="nome" name="nome" required autofocus />
 
-          <label for="cpf">CPF:</label><br />
+          <label for="cpf">CPF/CNPJ:</label>
           <input
             type="text"
             id="cpf"
             name="cpf"
-            maxlength="14"
-            placeholder="000.000.000-00"
+            maxlength="18"
+            placeholder="000.000.000-00 ou 00.000.000/0000-00"
             required
           />
 
-          <label for="email">Email:</label><br />
+          <label for="email">Email:</label>
           <input
             type="email"
             id="email"
             name="email"
             placeholder="seunome@gmail.com"
           />
+          <label for="endereco">Endereço:</label>
+          <input
+            type="text"
+            id="endereco"
+            name="endereco"
+            placeholder="Ex: Rua das Flores, Centro, São Paulo - SP, 01234-567"
+          />
 
-          <label for="telefone">Telefone:</label><br />
+          <label for="telefone">Telefone:</label>
           <input
             type="tel"
             id="telefone"
@@ -59,7 +71,6 @@
               Travas diagonal para andaimes
             </option>
             <option value="Rodízios">Rodízios</option>
-            <option value="Furadeira">Furadeira</option>
             <option value="Betoneiras">Betoneiras</option>
             <option value="Escoras">Escoras</option>
             <option value="Serra mármore">Serra mármore</option>
